--- a/src/main/resources/static/templates/mainPage.html
+++ b/src/main/resources/static/templates/mainPage.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" type="text/css" href="/css/mainSidebar.css">
+        <link rel="stylesheet" type="text/css" href="/css/groupAccordion.css">
+        <link rel="stylesheet" type="text/css" href="/css/mainSub.css">
         <script src="/js/mainSidebar.js" defer></script>
+<!--        <script src="/js/groupAccordion.js" defer></script>-->
     </head>
 
     <body>
@@ -23,8 +26,42 @@
                 <a href="http://localhost:8080/post" class="link">Post Test</a>
             </div>
         </nav>
+
+        <nav id="select">
+
+
+            <button id="test-button">Test</button>
+            <div>제목</div>
+            <div>날짜</div>
+        </nav>
+
+        <div class="area">
+            <div class="accordion">
+                <div class="accordion_item open">
+                    <button>
+                        그룹
+                    </button>
+                    <div class="accordion_content">
+                        <ul>
+                            <li>그룹1</li>
+                            <li>그룹2</li>
+                            <li>그룹3</li>
+                            <li>그룹4</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script defer>
+            //아코디언 클릭 이벤트 정의
+            document.querySelectorAll('.accordion .accordion_item > button').forEach((btn) => {
+                btn.addEventListener('click', (e) => {
+                    let accordion_item = e.currentTarget.parentNode;
+                    accordion_item.classList.toggle('open');
+                });
+            });
+        </script>
     </body>
 </html>
-
-
 
