sidebar + group + sub

--- a/src/main/resources/static/templates/post.html
+++ b/src/main/resources/static/templates/post.html
@@ -44,7 +44,7 @@
             </tr>
             <tr>
               <td>날짜</td>
-              <td><input type = text name = title size=50></td>
+              <td><input type = date name = title size=50></td>
             </tr>
             <tr>
               <td>장소</td>
