--- a/src/main/resources/static/templates/mainPage.html
+++ b/src/main/resources/static/templates/mainPage.html
@@ -2,16 +2,28 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=35o7z9sq66"></script>
+        <link rel="stylesheet" type="text/css" href="../../docs/css/examples-base.css" />
+        <link rel="stylesheet" type="text/css" href="../css/mainMap.css" />
+        <title>with US</title>
         <link rel="stylesheet" type="text/css" href="/css/mainSidebar.css">
         <link rel="stylesheet" type="text/css" href="/css/groupAccordion.css">
         <link rel="stylesheet" type="text/css" href="/css/mainSub.css">
         <script src="/js/mainSidebar.js" defer></script>
-<!--        <script src="/js/groupAccordion.js" defer></script>-->
     </head>
 
     <body>
-        <nav>
+    <div id = "grid">
+        <div class="section">
+            <div id="map"></div>
+            <code id="snippet" class="snippet"></code>
+        </div>
+        <script src="../js/mainMap.js"></script>
+
+        <nav id ="slideBar">
             <div class="menu-btn">
                 <div class="line line--1"></div>
                 <div class="line line--2"></div>
@@ -27,11 +39,7 @@
             </div>
         </nav>
 
-        <nav id="select">
-            <button id="test-button">Test</button>
-            <div>제목</div>
-            <div>날짜</div>
-        </nav>
+
 
         <div class="area">
             <div class="accordion">
@@ -51,6 +59,11 @@
             </div>
         </div>
 
+        <nav id="select">
+            <button id="test-button">Test</button>
+            <div>제목</div>
+            <div>날짜</div>
+        </nav>
         <script defer>
             //아코디언 클릭 이벤트 정의
             document.querySelectorAll('.accordion .accordion_item > button').forEach((btn) => {
@@ -60,6 +73,7 @@
                 });
             });
         </script>
+    </div>
     </body>
 </html>
 
