--- a/src/main/resources/static/css/groupAccordion.css
+++ b/src/main/resources/static/css/groupAccordion.css
@@ -3,8 +3,10 @@
     height: 400px;
     width: 200px;
     border: #FFFFFF;
-    background-color: #FFFFFF;
+    background-color:rgba(0, 0, 0, 0);
     /*transform: translateX(400px);*/
+    z-index: 10;
+
 }
 
 /*********************************************************/
@@ -13,6 +15,7 @@
     flex: 3 1 1px;
     display: flex;
     flex-direction: column;
+
 }
 
 /* 아코디언 아이템 닫혔을때 */
