--- a/src/main/resources/static/templates/mainPage.html
+++ b/src/main/resources/static/templates/mainPage.html
@@ -7,12 +7,12 @@
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=35o7z9sq66"></script>
         <link rel="stylesheet" type="text/css" href="../../docs/css/examples-base.css" />
-        <link rel="stylesheet" type="text/css" href="../css/mainMap.css" />
+        <link rel="stylesheet" type="text/css" href="../../../webapp/WEB-INF/css/mainMap.css" />
         <title>with US</title>
-        <link rel="stylesheet" type="text/css" href="/css/mainSidebar.css">
-        <link rel="stylesheet" type="text/css" href="/css/groupAccordion.css">
-        <link rel="stylesheet" type="text/css" href="/css/mainSub.css">
-        <script src="/js/mainSidebar.js" defer></script>
+        <link rel="stylesheet" type="text/css" href="/webapp/WEB-INF/css/mainSidebar.css">
+        <link rel="stylesheet" type="text/css" href="/webapp/WEB-INF/css/groupAccordion.css">
+        <link rel="stylesheet" type="text/css" href="/webapp/WEB-INF/css/mainSub.css">
+        <script src="/webapp/WEB-INF/js/mainSidebar.js" defer></script>
     </head>
 
     <body>
@@ -21,7 +21,7 @@
             <div id="map"></div>
             <code id="snippet" class="snippet"></code>
         </div>
-        <script src="../js/mainMap.js"></script>
+        <script src="../../../webapp/WEB-INF/js/mainMap.js"></script>
 
         <nav id ="slideBar">
             <div class="menu-btn">
