--- a/src/main/resources/static/css/mainSidebar.css
+++ b/src/main/resources/static/css/mainSidebar.css
@@ -16,10 +16,15 @@ nav{
     background-color: #FCDDB0;
     width: 400px;
     transition: all 800ms cubic-bezier(.8, 0, .33, 1);
-    float: left;
     border-radius: 0% 0% 0% 0%;
     z-index: 1000;
     height: 1400px;
+}
+#leftSlideBar{
+    float: left;
+}
+#rightSlideBar{
+    float: right;
 }
 #select {
     width: 400px;
