로그인 + 회원가입 + 게시물 작성

--- a/src/main/resources/static/css/mainSidebar.css
+++ b/src/main/resources/static/css/mainSidebar.css
@@ -12,6 +12,7 @@ body {
 nav{
     overflow: hidden;
     position: relative;
+    float: left;
     transform: translateX(-300px);
     background-color: #FCDDB0;
     width: 400px;
