--- a/src/main/resources/static/css/mainMap.css
+++ b/src/main/resources/static/css/mainMap.css
@@ -1,6 +1,6 @@
 #map {
     z-index: 1;
-    width: 100%;
+    width: 2543px;
     height: 100%;
     position: relative;
 }
@@ -9,8 +9,9 @@
     display: grid;
     grid-template-columns: 100px 200px 1800px 1fr; /*오름차순으로 설정, 이순서는 html에 선언된 순서대로 적용됨*/
     margin: 0px;
-    width: 2700px;
+    width: 100%;
+    height: 100%;
 }
 .section{
-    width: 2600px;
+    width: 100%;
 }
