레이아웃 수정

--- a/src/main/resources/static/css/mainSub.css
+++ b/src/main/resources/static/css/mainSub.css
@@ -1,6 +1,5 @@
 #select {
-    background-color: #FFFFFF;
-    border: 1px solid #222222;
+    background-color: #FF9F9F;
     height: 100%;
     width: 460px;
     border-radius: 0% 0% 0% 0%;
