게시물 조회

--- a/src/main/resources/static/css/mainSub.css
+++ b/src/main/resources/static/css/mainSub.css
@@ -7,3 +7,8 @@
     position: relative;
     transform: translateX(0px);
 }
+.sub-ul {
+    background-color: #FFFFFF;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
