--- a/src/main/resources/static/css/mainMap.css
+++ b/src/main/resources/static/css/mainMap.css
@@ -7,7 +7,7 @@
 #grid{
     /*border:5px solid pink;*/
     display: grid;
-    grid-template-columns: 100px 2000px 1fr; /*오름차순으로 설정, 이순서는 html에 선언된 순서대로 적용됨*/
+    grid-template-columns: 100px 400px 1600px 1fr; /*오름차순으로 설정, 이순서는 html에 선언된 순서대로 적용됨*/
     margin: 0px;
     width: 100%;
     height: 100%;
