--- a/src/main/resources/static/css/searchAccordion.css
+++ b/src/main/resources/static/css/searchAccordion.css
@@ -3,6 +3,7 @@
     height: 400px;
     width: 200px;
     border: #FFFFFF;
+    margin-top: 20px;
     background-color:rgba(0, 0, 0, 0);
     /*transform: translateX(400px);*/
     z-index: 10;
@@ -93,4 +94,22 @@ li {
     list-style: none;
     border-bottom: #ffffff;
     background-color: #ffffff;
+}
+.search {
+    position: relative;
+    width: 300px;
+}
+input {
+    width: 100%;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    padding: 10px 12px;
+    font-size: 14px;
+}
+img {
+    position : absolute;
+    width: 17px;
+    top: 10px;
+    right: 12px;
+    margin: 0;
 }
