검색창 레이아웃

--- a/src/main/resources/static/css/mainSearch.css
+++ b/src/main/resources/static/css/mainSearch.css
@@ -95,6 +95,8 @@ li {
     border-bottom: #ffffff;
     background-color: #ffffff;
 }
+
+/* 검색창 */
 .search {
     position: relative;
     width: 300px;
