--- a/src/main/resources/static/css/mainSidebar.css
+++ b/src/main/resources/static/css/mainSidebar.css
@@ -14,7 +14,7 @@ nav{
     position: relative;
     float: left;
     transform: translateX(-400px);
-    background-color: #FCDDB0;
+    background-color: #FF9F9F;
     width: 400px;
     height: 100%;
     transition: all 800ms cubic-bezier(.8, 0, .33, 1);
