--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -29,21 +29,20 @@ img{max-width:100%;}
 /*end reset*/
 body{
     font-family: 'Oxygen', sans-serif !important;
-    background:#927057;
+    background:#D7FBE8;
 }
 /*-- main --*/
 .main{
     width: 30%;
     margin: 3em auto 0;
     padding: 4em 4em 5em;
-    background: #d5c395;
+    background: #1FAB89;
     position:relative;
 }
 .main:before{
     position:absolute;
     top: -6%;
     left: 44%;
-    /*background:url(../images/3.png) no-repeat 0px 0px;*/
     display:block;
     height:35px;
     width:68px;
@@ -65,16 +64,16 @@ body{
 .figure img {
     width: 7%;
     margin: 0 auto;
-    border: 5px solid #d5c395;
+    border: 5px solid #1FAB89;
 }
 .input_form input[type="text"],.input_form input[type="password"]{
     outline: none;
     border: none;
-    background: #efe1c4;
+    background: #FFFFFF;
     padding: 10px 10px 10px 60px;
     width: 85%;
     font-size: 1.1em;
-    color: #927057;
+    color: #1FAB89;
     font-family: 'Oxygen', sans-serif;
     border-radius: 5px;
     -webkit-border-radius: 5px;
@@ -82,22 +81,16 @@ body{
     -o-border-radius: 5px;
     -ms-border-radius: 5px;
 }
-.input_form input[type="text"]{
-    /*background: url(../images/1.png) no-repeat 12px 10px #efe1c4;*/
-}
-.input_form input[type="password"]{
-    /*background: url(../images/2.png) no-repeat 12px 10px #efe1c4;*/
-}
 .input_form input[type="password"]{
     margin:1.5em 0;
 }
 .input_form input[type="submit"]{
     outline:none;
     border:none;
-    background:#927057;
+    background:#D7FBE8;
     padding:10px;
     width:100%;
-    color:#d5c395;
+    color:#1FAB89;
     font-size:1.5em;
     font-weight: 900;
     font-family: 'Oxygen', sans-serif;
@@ -111,10 +104,10 @@ body{
 .input_form input[type="button"]{
     outline:none;
     border:none;
-    background:#927057;
+    background:#D7FBE8;
     padding:10px;
     width:100%;
-    color:#d5c395;
+    color:#1FAB89;
     font-size:1.5em;
     font-weight: 900;
     font-family: 'Oxygen', sans-serif;
@@ -126,25 +119,10 @@ body{
     -ms-border-radius: 5px;
 }
 .input_form input[type="submit"]:hover{
-    background:#AA8264;
+    background:#9DF3C4;
 }
 .input_form input[type="button"]:hover{
-    background:#AA8264;
-}
-.footer{
-    text-align:center;
-    padding:2em 0 0;
-}
-.footer p{
-    font-size:1em;
-    color:#EFE1C4;
-    margin:0;
-}
-.footer p a{
-    color:#fff;
-}
-.footer p a:hover{
-    color:#EFE1C4;
+    background:#9DF3C4;
 }
 /*-- start-responsive-design --*/
 @media (max-width:1440px){
@@ -201,7 +179,7 @@ body{
 @media (max-width:568px){
     .figure img {
         width: 20%;
-        border: 3px solid #d5c395;
+        border: 3px solid #1FAB89;
     }
     .main {
         width: 68%;
@@ -277,12 +255,6 @@ body{
         width: 73%;
         font-size: 14px;
     }
-    .input_form input[type="text"] {
-        /*background: url(../images/1.png) no-repeat 18px 8px #efe1c4;*/
-    }
-    .input_form input[type="password"] {
-        /*background: url(../images/2.png) no-repeat 18px 8px #efe1c4;*/
-    }
     .input_form input[type="submit"] {
         font-size: 1em;
     }
@@ -293,8 +265,5 @@ body{
         width: 84%;
         padding: 1.5em 1.5em 2em;
         margin: 2em auto 0;
-    }
-    .footer p {
-        font-size: 13px;
     }
 }
